--- a/run/configs/sweep.yaml
+++ b/run/configs/sweep.yaml
@@ -47,3 +47,13 @@ parameters:
     distribution: log_uniform_values
     max: 0.01
     min: 0.0001
+  model.init_args.cheap_cross:
+    distribution: categorical
+    values:
+    - true
+    - false
+  data.init_args.spectrogram_norm_strategy:
+    distribution: categorical
+    values:
+    - meanstd
+    - log
