--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -96,6 +96,7 @@ data:
     dataset_dirpath: '/workspace/data_external/'
     split_index: 0
     n_splits: 5
+    random_subrecord_mode: discrete
     eeg_norm_strategy: meanstd
     spectrogram_norm_strategy: log
     cache_dir: .cache
