--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -97,6 +97,7 @@ data:
     split_index: 0
     n_splits: 5
     random_subrecord_mode: discrete
+    compute_gaussianize: false
     eeg_norm_strategy: meanstd
     spectrogram_norm_strategy: log
     cache_dir: .cache
