--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -98,7 +98,7 @@ data:
     n_splits: 5
     random_subrecord_mode: discrete
     load_kwargs:
-      gaussianize_mode: null
+      gaussianize_mode: pre
     eeg_norm_strategy: meanstd
     spectrogram_norm_strategy: log
     cache_dir: /workspace/data_external/.cache
