Add pretransform by EEG spectrogram calculation
1. Add spectrogram from EEG to EGA notebook
2. Add optional mel transform as pretransform
3. Add separate configs for different pre-transforms
4. Revert default pretransform to none

--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -98,7 +98,8 @@ data:
     n_splits: 5
     random_subrecord_mode: discrete
     load_kwargs:
-      gaussianize_mode: pre
+      gaussianize_mode: null
+      do_mel_eeg: false
     eeg_norm_strategy: meanstd
     spectrogram_norm_strategy: log
     cache_dir: /workspace/data_external/.cache
