Add EEG clipping; Use more threads for pretransform if it is performed in the main process

--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -100,6 +100,7 @@ data:
     load_kwargs:
       gaussianize_mode: null
       do_mel_eeg: false
+      do_clip_eeg: true
     eeg_norm_strategy: meanstd
     spectrogram_norm_strategy: log
     cache_dir: /workspace/data_external/.cache
