--- a/run/configs/gaussianize.yaml
+++ b/run/configs/gaussianize.yaml
@@ -2,5 +2,6 @@ data:
   init_args:
     load_kwargs:
       gaussianize_mode: pre
+      do_clip_eeg: true
     eeg_norm_strategy: meanstd
     cache_dir: /workspace/data_external/.cache_gaussianize
