--- a/run/configs/mel.yaml
+++ b/run/configs/mel.yaml
@@ -2,5 +2,6 @@ data:
   init_args:
     load_kwargs:
       do_mel_eeg: true
+      do_clip_eeg: true
     eeg_norm_strategy: log
     cache_dir: /workspace/data_external/.cache_mel
