Add weighting by number of voters

--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -69,6 +69,7 @@ model:
       cheap_cross: false
       pool: cls
       use: all
+    weight_by_n_voters: false
     optimizer_init: 
       class_path: torch.optim.AdamW
       init_args:
