Change label smoothing
1. Calculate confusion matrix on a subset w larger n_voters & apply to one w smaler

--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -108,7 +108,7 @@ data:
       do_clip_eeg: true
     eeg_norm_strategy: meanstd
     spectrogram_norm_strategy: log
-    label_smoothing: null
+    label_smoothing_n_voters: null
     cache_dir: /workspace/data_external/.cache
     batch_size: 32
     num_workers: 8
