Enable model saving

--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -8,7 +8,7 @@ trainer:
     - class_path: lightning.pytorch.callbacks.LearningRateMonitor
       init_args:
         logging_interval: step
-    - class_path: src.utils.utils.ModelCheckpointNoSave
+    - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
         save_top_k: 1
         monitor: val_loss_kld
