--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ tqdm==4.66.2
 scipy==1.12.0
 scikit-learn==1.4.1.post1
 GitPython==3.1.42
+lightning==2.2.0.post0
 jsonargparse[signatures]==4.27.5
 wandb==0.16.3
 librosa==0.10.1
