Change train-val splitting
1. Split only high voters part
2. Concatenate low part non-intersecting with val

--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -112,7 +112,7 @@ data:
     eeg_norm_strategy: meanstd
     spectrogram_norm_strategy: log
     label_smoothing_n_voters: null
-    drop_low_n_voters: null
+    low_n_voters_strategy: keep
     cache_dir: /workspace/data_external/.cache
     batch_size: 32
     num_workers: 8
