--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -103,6 +103,7 @@ data:
   class_path: src.data.datamodule.HmsDatamodule
   init_args:
     dataset_dirpath: '/workspace/data_external/'
+    pl_filepath: null
     split_index: 0
     n_splits: 5
     random_subrecord_mode: discrete
