--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -107,12 +107,7 @@ data:
     split_index: 0
     n_splits: 5
     random_subrecord_mode: discrete
-    load_kwargs:
-      gaussianize_mode: null
-      do_mel_eeg: false
-      do_clip_eeg: true
-    eeg_norm_strategy: meanstd
-    spectrogram_norm_strategy: log
+    clip_eeg: true
     label_smoothing_n_voters: null
     low_n_voters_strategy: keep
     cache_dir: /workspace/data_external/.cache
