--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -111,6 +111,7 @@ data:
     label_smoothing_n_voters: null
     low_n_voters_strategy: keep
     by_subrecord: false
+    test_is_train: false
     img_size: null
     cache_dir: /workspace/data_external/.cache
     batch_size: 32
