--- a/run/configs/predict_train.yaml
+++ b/run/configs/predict_train.yaml
@@ -5,6 +5,7 @@ trainer:
         output_filepath: /workspace/data_external/pseudolabel/submission.csv
         image_output_dirpath: /workspace/data_external/pseudolabel/images
         drop_eeg_sub_id: false
+        img_size: 320
 data:
   init_args:
     test_is_train: true
