--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -73,6 +73,7 @@ model:
       cheap_cross: false
       pool: cls
       use: all
+    consistency_loss_lambda: null
     weight_by_n_voters: false
     weight_by_inv_n_subrecords: false
     optimizer_init: 
@@ -109,10 +110,9 @@ data:
     n_splits: 5
     random_subrecord_mode: discrete
     label_smoothing_n_voters: null
-    low_n_voters_strategy: keep
+    low_n_voters_strategy: high
     by_subrecord: false
     test_is_train: false
-    transform_low_n_voters_twice: false
     img_size: null
     cache_dir: /workspace/data_external/.cache
     batch_size: 32
