Allow twice aug that include selection transform
1. Add option to drop non-consensus subrecords
2. Remove separate select transform

--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -114,6 +114,7 @@ data:
     by_subrecord: false
     test_is_train: false
     img_size: null
+    drop_non_consensus: false
     cache_dir: /workspace/data_external/.cache
     batch_size: 32
     num_workers: 8
