--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -76,6 +76,7 @@ model:
     consistency_loss_lambda: null
     weight_by_n_voters: false
     weight_by_inv_n_subrecords: false
+    expert_ensemble: false
     optimizer_init: 
       class_path: torch.optim.AdamW
       init_args:
