--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ scikit-learn==1.4.1.post1
 GitPython==3.1.42
 lightning==2.2.0.post0
 jsonargparse[signatures]==4.27.5
-wandb==0.16.3
+wandb[launch]==0.16.3
 librosa==0.10.1
 ipympl==0.9.3
 justpyplot==0.1.1
