--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -116,6 +116,9 @@ data:
     img_size: null
     cache_dir: /workspace/data_external/.cache
     batch_size: 32
+    # set force_batch_size to false if run in agent 
+    # to allow different GPUs to have different batch sizes
+    force_batch_size: true
     num_workers: 8
     pin_memory: false
     prefetch_factor: 2
