--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -20,7 +20,10 @@ trainer:
         mode: min
         save_on_train_epoch_end: false
         save_last: true
-
+    - class_path: src.utils.utils.EMACallback
+      init_args:
+        decay: 0.9
+        save_on: train_epoch_end
   # limit_train_batches: 10
   # limit_val_batches: 10
   max_epochs: 16
