--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -118,7 +118,8 @@ data:
     by_subrecord_val: false
     test_is_train: false
     img_size: null
-    drop_bad: null
+    drop_bad_which: null
+    drop_bad_from: null
     mixup_alpha: null
     eeg_norm: precalc
     cache_dir: /workspace/data_external/.cache
