--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -108,7 +108,7 @@ data:
   class_path: src.data.datamodule.HmsDatamodule
   init_args:
     dataset_dirpath: '/workspace/data_external/'
-    pl_filepath: null
+    pl_filepathes: null
     split_index: 0
     n_splits: 5
     random_subrecord_mode: discrete
