Add multilabel_1v1 mode

--- a/run/configs/common.yaml
+++ b/run/configs/common.yaml
@@ -80,6 +80,7 @@ model:
     weight_by_n_voters: false
     weight_by_inv_n_subrecords: false
     pos_weight: null
+    bce_mode: null
     optimizer_init: 
       class_path: torch.optim.AdamW
       init_args:
